--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: install timesyncd configuration from template
+- name: Install timesyncd configuration from template.
   become: true
   ansible.builtin.template:
     src: 'systemd-timesyncd.conf.j2'
@@ -8,11 +8,11 @@
     owner: root
     group: root
     mode: '0644'
-  notify: restart timesyncd daemon
+  notify: Restart timesyncd daemon
 
-- name: ensure that timesyncd is configured to run and is running
+- name: Ensure that timesyncd is configured to run and is running.
   become: true
   ansible.builtin.service:
     name: '{{ ansible_role_timesyncd_daemon }}'
-    enabled: yes
+    enabled: true
     state: started
