--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,19 +1,19 @@
 ---
 
-- name: install packages on Debian-distributions
-  become: True
+- name: Install packages on Debian-distributions.
+  become: true
   ansible.builtin.apt:
     name: '{{ ansible_role_timesyncd_packages }}'
-    update_cache: yes
+    update_cache: true
     lock_timeout: 300
     state: present
   when: ansible_distribution_file_variety == "Debian"
 
-- name: install packages on EL-distributions
-  become: True
+- name: Install packages on EL-distributions.
+  become: true
   ansible.builtin.yum:
     name: '{{ ansible_role_timesyncd_packages }}'
-    update_cache: yes
+    update_cache: true
     lock_timeout: 300
     state: present
   when: ansible_distribution_file_variety == "RedHat"
